--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@emailjs/browser": "^3.11.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@popperjs/core": "^2.11.8",
+    "angular-datatables": "^16.0.1",
     "bootstrap": "^5.3.2",
     "crypto-browserify": "^3.12.0",
+    "datatables.net": "^1.13.7",
     "emailjs-com": "^3.2.0",
     "fs-extra": "^11.1.1",
     "ng-angular-popup": "^0.4.7",
@@ -45,7 +47,9 @@
     "@angular-devkit/build-angular": "^16.2.1",
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.12",
+    "@types/datatables.net": "^1.10.27",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.27",
     "@types/nodemailer": "^6.4.13",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
